update the video link

--- a/index.html
+++ b/index.html
@@ -706,9 +706,12 @@
           
           <div class="column is-full-width">
             <div class="column">
+              <iframe src="https://drive.google.com/file/d/1mEFHwPvVMX3_eM69b_xJDsY3ZUpIgozP/preview" width="960" height="540" allow="autoplay"></iframe>
+                <!--
                 <video id="teaser" controls autoplay loop muted playsinline height="100%">
                   <source src="static/videos/video_supp_new_institute.mp4" type="video/mp4">
               </video>
+              -->
             </div>
           </div>
           
