--- a/index.html
+++ b/index.html
@@ -136,22 +136,22 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
-              <!-- <span class="link-block">
-                <a href=""
+              <span class="link-block">
+                <a href="https://arxiv.org/pdf/2411.16080"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>arxiv</span>
+                  <span>Paper</span>
                 </a>
-              </span> -->
+              </span>
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2411.16080"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>Paper</span>
+                  <span>arXiv</span>
                 </a>
               </span>
               <!-- Video Link. -->
@@ -167,7 +167,7 @@
               
               <!-- Code Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://github.com/snowflakewang/PBR_Boost_3DGen"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -744,7 +744,7 @@
             <h2 class="title">BibTeX</h2>
 
     <pre style="background-color:#e9eeef;padding: 1.25em 1.5em">
-<code>@proceedings{xxx,   
+<code>@proceedings{wang2024pbrboost3dgen,   
   title={Boosting 3D Object Generation through PBR Materials},
   author={Wang, Yitong and Xu, Xudong and Ma, Li and Wang, Haoran and Dai, Bo},
   journal={ACM SIGGRAPH Asia 2024 Conference Proceedings},
