update the citation format

--- a/index.html
+++ b/index.html
@@ -744,12 +744,25 @@
             <h2 class="title">BibTeX</h2>
 
     <pre style="background-color:#e9eeef;padding: 1.25em 1.5em">
-<code>@proceedings{wang2024pbrboost3dgen,   
-  title={Boosting 3D Object Generation through PBR Materials},
-  author={Wang, Yitong and Xu, Xudong and Ma, Li and Wang, Haoran and Dai, Bo},
-  journal={ACM SIGGRAPH Asia 2024 Conference Proceedings},
-  year={2024}
-}</code></pre> 
+<code>
+@inproceedings{wang2024boosting3dobjectgeneration,
+  author = {Wang, Yitong and Xu, Xudong and Ma, Li and Wang, Haoran and Dai, Bo},
+  title = {Boosting 3D object generation through PBR materials},
+  year = {2024},
+  booktitle = {SIGGRAPH Asia 2024 Conference Papers},
+  articleno = {140},
+  numpages = {11},
+  series = {SA '24}
+}
+@misc{wang2024boosting3dobjectgeneration,
+  title={Boosting 3D Object Generation through PBR Materials}, 
+  author={Yitong Wang and Xudong Xu and Li Ma and Haoran Wang and Bo Dai},
+  year={2024},
+  eprint={2411.16080},
+  archivePrefix={arXiv},
+  primaryClass={cs.CV},
+}
+</code></pre> 
         </div>
         </section>
         
