--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
   year={2024},
   eprint={2411.16080},
   archivePrefix={arXiv},
-  primaryClass={cs.CV},
+  primaryClass={cs.CV}
 }
 </code></pre> 
         </div>
